--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     font-weight: 700;
 }
 .content{
-    top: 30%;
+    top: 10%;
     position: absolute;
     transform: translateY(50%);
     color: white;
@@ -56,6 +56,10 @@
     margin-top: 30px;
     cursor: pointer;
 }
+.content button:hover{
+    transform: scale(1.2);
+}
+
 .content button img {
     width: 15px;
     margin-left: 10px;
