--- a/style.css
+++ b/style.css
@@ -92,3 +92,14 @@
         opacity: 1;
     }
 }
+@media screen and (min-width: 600px) {
+    .container
+    {
+        max-height: 100%;
+    }
+    .content h1{
+        font-size: 20px;
+        font-weight: 500;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+}
